# memoX

./: .dockerignore  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  ANALYSIS_REPORT_20260504.md  CLAUDE.md  DEVELOPMENT.md  Dockerfile  README.md  _debug_chunk.py  alembic.ini  config.example.yaml  config.yaml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_streamlit.sh  start.sh  start_server.sh  test_schema.py
.github/workflows/: ci.yml  external-e2e.yml  production-monitor.yml  release-gate.yml
alembic/: README
alembic/versions/: 0002_add_audit_log.py  0003_add_memories.py  0004_add_chat_session_summary.py  000_initial_schema.py
data/: skills_registry.json
docs/: API.md  CHANGESET_HANDOFF.md  DEPLOYMENT.md  E2E_TEST_REPORT_20260530.md  EXTERNAL_AGENT_E2E_RUNBOOK.md  MEDIA_STUDIO.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PRODUCTION_MONITOR_RUNBOOK.md  RECOVERY_RUNBOOK.md  RELEASE_NOTES_2026-05-25.md  RELEASE_READINESS.md
docs/superpowers/plans/: 2026-04-05-knowledge-base-groups.md  2026-04-06-multi-agent-iterative-orchestrator.md  2026-04-06-multiagent-functional-test.md  2026-04-06-phase2-experience-loop.md  2026-04-06-phase3-capability-expansion.md  2026-04-11-worker-skill-loader.md  2026-04-14-image-to-video.md  README.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend_wip/: index.html  package-lock.json  package.json
frontend_wip/src/: App.tsx  App.tsx.bak  main.tsx  shared.tsx  vite-env.d.ts
scripts/: backup_restore.py  docker_smoke_test.py  index_consistency.py  ops_check.py  production_monitor_check.py  rebuild_bm25_index.py  restore_drill.py  run_external_e2e.py  smoke_test.py
src/: __init__.py  auth.py  main.py
src/agents/: base_agent.py  inter_agent_protocol.py  mail_bus.py  sandbox.py  worker_pool.py
src/config/: __init__.py
src/coordinator/: __init__.py  iterative_orchestrator.py  multi_agent_executor.py  task_jobs.py  task_planner.py
src/imaging/: __init__.py  dashscope_client.py  i2v_client.py  video_client.py
src/knowledge/: __init__.py  bm25_indexer.py  document_parser.py  group_store.py  hybrid_retriever.py  knowledge_graph.py  rag_engine.py  semantic_chunker.py  simple_vector_store.py  vector_store.py
src/memory/: __init__.py  memory_manager.py  memory_recall.py  preference_learner.py
src/ops/: __init__.py  archive_mirror.py  backup.py  diagnostics.py  index_consistency.py  lifecycle.py  maintenance.py  readiness.py  recovery.py  redaction.py
src/scheduler/: __init__.py  cron.py  runner.py
src/skills/: __init__.py  __main__.py  cli.py  github_meta.py  installer.py  loader.py  registry.py  tool.py
src/storage/: __init__.py  persistence.py
src/tools/: __init__.py  catalog.py  database.py  filesystem.py  github.py  mail.py  net_safety.py  playwright_crawler.py  shell.py  web.py
src/ui/: streamlit_app.py
src/web/: api.py  state.py
src/workflow/: __init__.py  dsl.py  engine.py  parser.py
tests/: test_api_permissions.py  test_api_schema.py  test_auth_security.py  test_backup_restore.py  test_chat_i2v_marker.py  test_citations.py  test_config_validation.py  test_cron.py  test_deployment_files.py  test_diagnostics_redaction.py  test_document_chunks.py  test_entrypoints.py  test_files_route.py  test_filesystem_tools.py  test_fullchain_phases.py  test_group_store.py  test_hash_embedding.py  test_hybrid_retriever.py  test_i2v_api.py  test_i2v_client.py  test_image_parser.py  test_index_consistency.py  test_integration_multiagent.py  test_iterative_orchestrator.py  test_kimi_reasoning_tool_calls.py  test_knowledge_graph.py  test_knowledge_graph_api.py  test_lifecycle_cleanup.py  test_mail_bus.py  test_mail_tools.py  test_memory_manager.py  test_memory_recall.py  test_multi_agent_executor.py  test_ops_archive_mirror.py  test_ops_check.py  test_ops_maintenance.py  test_ops_recovery.py  test_persistence.py  test_preference_learner.py  test_production_monitor_check.py  (+34 more)
tests/e2e/: __init__.py  test_admin_ui_browser_flow.py  test_deepseek_mixed_orchestration.py  test_deterministic_collab_orchestrator_flow.py  test_deterministic_multiagent_task_flow.py  test_e2e_collab.py  test_e2e_workflow.py  test_full_pipeline.py  test_scheduled_task_queue_flow.py  test_tool_policy_audit_flow.py
(+32 files in other folders)
