[project]
name = "memox"
version = "0.1.0"
description = "Multi-agent collaborative knowledge management platform with RAG, scheduling, and document intelligence"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<4.0"
authors = [
    { name = "hiderfong", email = "hiderfong@github.com" }
]
keywords = [
    "rag",
    "knowledge-base",
    "multi-agent",
    "collaboration",
    "document-intelligence",
    "chatbot",
    "vector-search",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
    "loguru>=0.7.0",
    "pyyaml>=6.0",
    # 文档解析
    "pymupdf>=1.23.0",
    "python-docx>=1.0.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.21",
    "beautifulsoup4>=4.12.0",
    # 向量存储与嵌入
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    # 全文检索（混合搜索）
    "rank-bm25>=0.2",
    # 可选: APScheduler (定时任务)
    "apscheduler>=3.10.0",
    # 限流
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.11.0",
    "mypy>=1.10.0",
    "pre-commit>=4.0.0",
    "tomlkit>=0.13.0",
    "alembic>=0.9.0",
]
server = [
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.30.0",
]

[project.scripts]
memox = "main:run"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src/*"]

[tool.ruff]
target-version = "py310"
line-length = 120
indent-width = 4

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "frontend",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "T20",   # flake8-print
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E741",   # ambiguous variable name
    "B006",   # mutable argument default (common in data classes)
    "B008",   # do not perform function calls in argument defaults
    "SIM102", # collapsible-if
    "SIM108", # if-expr-with-true-false
    "T201",   # print found (use loguru instead, but allow in tests)
    "T203",   # pprint found
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "loguru.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "chromadb.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sentence_transformers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "apscheduler.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
addopts = "-q --tb=short"

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/frontend/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
